# Huawei_CCA_TFA

./: Makefile  readme.rst
include/services/: rmmd_svc.h
include/services/trp/: platform_trp.h
lib/xlat_tables_v2/aarch64/: xlat_tables_arch.c
plat/qemu/common/: qemu_common.c  qemu_private.h
plat/qemu/common/trp/: qemu_trp.mk  qemu_trp_setup.c
plat/qemu/qemu/include/: platform_def.h
plat/qemu/qemu/trp/: trp-qemu.mk
services/std_svc/rmm_monitor/: rmmd.mk  rmmd_main.c
services/std_svc/rmm_monitor/trp/: CMakeLists.txt  linker.ld.S  run-asm.S  trp.mk  trp_entry.S  trp_main.c  trp_private.h
services/std_svc/rmm_monitor/trp/realm_monitor/: CMakeLists.txt  Cargo.toml  FIXME.md  Makefile  build.sh
services/std_svc/rmm_monitor/trp/realm_monitor/c_src/: CMakeLists.txt  ContextSwitchAux.c  Makefile  abs.c  test.c
services/std_svc/rmm_monitor/trp/realm_monitor/c_src/include/: assembler.h  assert.h  const.h  debug.h  mmio.h  mmu.h  pagetable.h  sizes.h  stdarg.h  stdbool.h  sysreg.h
services/std_svc/rmm_monitor/trp/realm_monitor/c_src/include/common/: asm.h  asm_macros_common_gobiidae_spec.S  asm_ops.h  dispatcher.h  image_md5_data.h  linkage.h  lock.h  macro.h  smccc.h  ti_common.h
services/std_svc/rmm_monitor/trp/realm_monitor/c_src/include/common/tbbr/: tbbr_img_def.h
services/std_svc/rmm_monitor/trp/realm_monitor/c_src/include/mm/: mm.h  tzc400.h
services/std_svc/rmm_monitor/trp/realm_monitor/c_src/mm/: mm.c
services/std_svc/rmm_monitor/trp/realm_monitor/src/: allocator.rs  io.rs  lib.rs  slab.rs
services/std_svc/rmm_monitor/trp/realm_monitor/src/driver/uart/: pl011.rs
services/std_svc/rmm_monitor/trp/realm_monitor/src/rmm/: granule_util.rs  measurement.rs  mod.rs  rec_util.rs  rmm_smc.rs  rmm_util.rs  rsi_util.rs  rvic_util.rs  smc_rmi.rs  sysreg.rs  table_util.rs  timer_util.rs
services/std_svc/rmm_monitor/trp/realm_monitor/src/slab/: bitmap.rs  buddy.rs
services/std_svc/rmm_monitor/trp/realm_monitor/src/util/: asm_ops.rs  mod.rs
services/std_svc/rmm_monitor/trp/realm_monitor/src/virt/: s2mmu.rs  vm.rs
services/std_svc/rmmd/trp/: arm.h  run-asm.S  trp.mk  trp_entry.S  trp_main.c  trp_private.h  vectors.S
services/std_svc/rmmd/trp/realm_monitor/: .gitignore  CMakeLists.txt  linker.lds  main.c
services/std_svc/rmmd/trp/realm_monitor/c_src/: SMCHandler.c  abs.c  linker.ld.S  ns_access.S  pl011.c
services/std_svc/rmmd/trp/realm_monitor/c_src/core/: entry.S  head.S  mmu.S  pagetable.S  run-asm.S  vectors.S
services/std_svc/rmmd/trp/realm_monitor/c_src/include/: abs.h  barriers.h  buffer.h  memory.h  platform.h  smc-rmi.h  stddef.h  stdint.h  table.h
services/std_svc/rmmd/trp/realm_monitor/c_src/include/common/: def.h  errno.h  list.h
services/std_svc/rmmd/trp/realm_monitor/c_src/include/mm/: buddy_allocator.h  mmu_def.h  stage1_mmu.h  tlsf.h  tzc_common.h
services/std_svc/rmmd/trp/realm_monitor/c_src/mm/: Makefile  mm.c  mmu_helpers.S
services/std_svc/rmmd/trp/realm_monitor/src/: lib.rs  macro.rs
services/std_svc/rmmd/trp/realm_monitor/src/rmm/: abs_util.rs  context_switch.rs  granule_util.rs  pending_check.rs  platform.rs  psci_util.rs  rmm_util.rs  sysreg.rs
services/std_svc/rmmd/trp/realm_monitor/src/slab/: list.rs
services/std_svc/rmmd/trp/realm_monitor/src/util/: list.rs  mmops.rs
services/std_svc/rmmd/trp/realm_monitor/src/virt/: ipa_region.rs  mod.rs  vcpu.rs
